fixed white nav

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 	<header>
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css"> 
 		<link rel="stylesheet" type="text/css" href="css/animate.css"> 
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />   
 	    <link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
 	    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,900' rel='stylesheet' type='text/css'>
-	    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400' rel='stylesheet' type='text/css'>	</header>
+	    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400' rel='stylesheet' type='text/css'>	
+	    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+
+	    </header>
 	
 	<style>
 	.modal-backdrop{
@@ -225,7 +227,7 @@
         <p class="wow fadeInUp">	Hey There, As you can tell i'm Michael Perez and i am a Web Designer and Developer. I've been in the business for quite some time now and i enjoy every minute of it. You need any projects that need some work? <a href="#" data-toggle="modal" data-target="#myModal2" style="color: #c71722;">Contact me</a> and lets see if we can bring your ideas to life!<p>
       </div>
 
-      <img src="images/297480_10150910871820595_1852264307_n.jpg" id="mike" class="img-circle col-md-6 wow fadeInRight" width="500" height="500">
+      <img src="images/297480_10150910871820595_1852264307_n.jpg" id="mike" class="img-circle col-md-6 wow fadeInRight">
 
       
       <div class="col-md-5">
