added a new project

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       	<h2 id="proOne" class="proName wow fadeInLeft col-md-12">Login php</h2>
       	<ul class="facts wow fadeInLeft col-md-12 ">
 	      	<li><b>System:</b> CRUD</li>
-          <li><b>Language used:</b> PHP</li>
+          <li><b>Language used:</b> PHP, HTML, CSS</li>
           <li><b>Frameworks used:</b> Bootstrap, Codeigniter</li>
 	      	<li><b>Role:</b> Designer & Developer</li>
 	      	<li><b>Platform:</b> Web</li>
@@ -224,16 +224,37 @@
     <h2 class="proName wow fadeInRight col-md-12">Wheres my bus</h2>
     <ul class="facts wow fadeInRight col-md-12">
     	<li><b>System:</b> CRUD</li>
-      <li><b>Language used:</b> PHP</li>
+      <li><b>Language used:</b> PHP, HTML, CSS</li>
       <li><b>Frameworks used:</b> Bootstrap</li>
     	<li><b>Role:</b> Designer & Developer</li>
     	<li><b>Platform:</b> Web</li>
+      <li><b>GitHub:</b> <a href="https://github.com/MikeWasHere/ASL">github.com/MikeWasHere/ASL</a></li>
     </ul>
     <p class="proDesc wow fadeInRight">Wheres My Bus is a website that gives you real time information displayed on a map for the specific bus you searched for. Gives you the option of signing in with your social networking profiles.</p>
 </div>
     
 <div class="col-md-6 proTwo pull-left wow fadeInLeft">    
 	<img src="http://i.imgur.com/31feSIJ.png" class="web elPic">
+</div>
+</div>
+
+<div class="row">
+<div class="col-md-6 proTwo pull-left">
+    <h2 class="proName wow fadeInLeft col-md-12">B.Baklava</h2>
+    <ul class="facts wow fadeInLeft col-md-12">
+      <li><b>System:</b>CRUD</li>
+      <li><b>Language used:</b> JS, HTML, CSS</li>
+      <li><b>Frameworks used:</b> Foundation, Angular, Firebase, AngularFire</li>
+      <li><b>Role:</b> Designer & Developer</li>
+      <li><b>Platform:</b> Web</li>
+      <li><b>GitHub:</b> <a href="https://github.com/MikeWasHere/bbaklava-website">github.com/MikeWasHere/bbaklava-website</a></li>
+      <li><b>Hosted:</b> <a href="https://bbaklava.firebaseapp.com">bbaklava.com</a></li>
+    </ul>
+    <p class="proDesc wow fadeInLeft">B for Baklava is a simple mockup of a farmers market website that uses AngularFire to talk to the database to display items stored in the database. I was also able to Create an Item, Update an item, and also Delete an item.</p>
+</div>
+    
+<div class="col-md-6 proTwo pull-right wow fadeInRight">    
+  <img src="http://i.imgur.com/zJP9Gt0.png" class="web elPic">
 </div>
 </div>
 
