fixed some style issues

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="featurette-item">
           <img src="images/1430366424_handdrawn-pencil-128.png" class="img-circle proPic wow bounceIn" data-wow-delay="1s" height="152" width="152"/>
           <h2 class="wow fadeInDown">sketch it up</h2>
-          <p class="wow fadeInUp">We meet and you tell me what your ideas are. I sketch up a rough draft that we both agree upon then i start the next phase</p>
+          <p class="wow fadeInUp">We meet and you tell me what your ideas are. I sketch up a rough draft and a lo-fi Wireframe that you like and then we move on.</p>
         </div>
       </div>
 
@@ -176,7 +176,7 @@
         <div class="featurette-item">
           <img src="images/1430367304_colors.png" class="img-circle wow bounceIn" data-wow-delay="1s" height="152" width="152"/>
           <h2 class="wow fadeInDown">Photoshop magic</h2>
-          <p class="wow fadeInUp">I add all the design, colors, and everything else we talked about and make a PSD of what the site will look like. If you like, then i start coding! </p>
+          <p class="wow fadeInUp">I add all the design, colors, and everything else we talked about and make a high quality wire-frame of what the site will look like. </p>
         </div>
       </div>
 
@@ -184,7 +184,7 @@
         <div class="featurette-item">
           <img src="images/1430367942_browser.png" class="img-circle wow bounceIn" data-wow-delay="1s" height="152" width="152"/>
           <h2 class="wow fadeInDown">Code It, and launch!</h2>
-          <p class="wow fadeInUp">Once its coded up and ready we will meet up again and you will give your final approval. Once you Then... we launch</p>
+          <p class="wow fadeInUp">Once its coded up and ready we will meet up again and you will give your final thoughts and approval. Once you like what you see, we launch!</p>
         </div>
       </div>
       
