added new stuff

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,900' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400' rel='stylesheet' type='text/css'>	
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"> 
   </header>
 	
 	<style>
@@ -201,72 +202,143 @@
     <hr class="half-line-red wow fadeInRight">
 
     <div class="row">
-    <div class="col-md-12 text-center">&nbsp;</div>
-    <div class="col-md-6 col-sm-12">
-      	<h2 id="proOne" class="proName wow fadeInLeft col-md-12">Login php</h2>
-      	<ul class="facts wow fadeInLeft col-md-12 ">
-	      	<li><b>System:</b> CRUD</li>
-          <li><b>Language used:</b> PHP, HTML, CSS</li>
-          <li><b>Frameworks used:</b> Bootstrap, Codeigniter</li>
-	      	<li><b>Role:</b> Designer & Developer</li>
-	      	<li><b>Platform:</b> Web</li>
-      	</ul>
-      	<p class="proDesc wow fadeInLeft">This site is a simple mock up template that i used to implement login in function through a modal. You cannot login and see the results page without the proper credentials. </p>
+      <!-- <div class="col-md-12 text-center">&nbsp;</div> -->
+      <div class="col-md-6 col-sm-12 proTwo pull-left wow fadeInLeft project-container">
+        <div class="web">
+          <span class="window-circle">
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+          </span>
+          <div class="browser">
+            <div class="browser-arrows">
+              <i class="fa fa-caret-left" aria-hidden="true"></i>
+              <i class="fa fa-caret-right" aria-hidden="true"></i>
+            </div>
+            <span class="url-bar"><i class="fa fa-globe" aria-hidden="true"></i><a href="https://bbaklava.firebaseapp.com" target="_blank">Bbaklava.com</a></span>
+          </div>
+          <div class="img-container">
+            <img src="images/bbaklava.png" class="elPic">
+            <div class="overlay">
+              <div class="text">
+                <ul class="facts">
+                  <li>CRUD</li>
+                  <li>JS, HTML, CSS</li>
+                  <li>Foundation, Angular, Firebase, AngularFire</li>
+                  <li>Designer &amp; Developer</li>
+                </ul>
+                <p class="proDesc">B for Baklava is a simple mockup of a farmers market website that uses AngularFire to talk to the database to display items stored in the database. I was also able to Create an Item, Update an item, and also Delete an item.</p>
+                <div class="github">
+                  <i class="fa fa-github" aria-hidden="true"></i>
+                  <a href="https://github.com/MikeWasHere/bbaklava-website">github.com/MikeWasHere/bbaklava-website</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-sm-12 proTwo pull-right wow fadeInRight project-container">
+        <div class="web">
+          <span class="window-circle">
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+          </span>
+          <div class="browser">
+            <div class="browser-arrows">
+              <i class="fa fa-caret-left" aria-hidden="true"></i>
+              <i class="fa fa-caret-right" aria-hidden="true"></i>
+            </div>
+            <span class="url-bar"><i class="fa fa-globe" aria-hidden="true"></i><a href="https://www.atlasroofing.com/roof-shingles" target="_blank">Atlasrofing.com</a></span>
+          </div>
+          <div class="img-container">
+            <img src="images/atlas.png" class="elPic">
+            <div class="overlay">
+              <div class="text">
+                <ul class="facts">
+                  <li>JS, HTML, CSS, PHP</li>
+                  <li>Custom CMS</li>
+                  <li>Designer</li>
+                </ul>
+                <p class="proDesc">Atlas Roofing company I learned the companies custom CMS and also designed some of their web pages and made them mobile responsive, also made sure they were working through out multiple browsers.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-<div class="col-md-6 col-sm-12">    
-	<img src="http://i.imgur.com/oqVqsFa.png" class="web wow fadeInRight elPic" >
-</div>
-</div>
+    <div class="row">
+      <!-- <div class="col-md-12 text-center">&nbsp;</div> -->
+      <div class="col-md-6 col-sm-12 proTwo pull-left wow fadeInLeft project-container">
+        <div class="web">
+          <span class="window-circle">
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+          </span>
+          <div class="browser">
+            <div class="browser-arrows">
+              <i class="fa fa-caret-left" aria-hidden="true"></i>
+              <i class="fa fa-caret-right" aria-hidden="true"></i>
+            </div>
+            <span class="url-bar"><i class="fa fa-globe" aria-hidden="true"></i><a href="https://www.diversitech.com/" target="_blank">DiversiTech.com</a></span>
+          </div>
+          <div class="img-container">
+            <img src="images/diversitech.png" class="elPic">
+            <div class="overlay">
+              <div class="text">
+                <ul class="facts">
+                  <li>JS, HTML, CSS, PHP</li>
+                  <li>Custom CMS</li>
+                  <li>Designer &amp; Developer</li>
+                </ul>
+                <p class="proDesc">In the DiversiTech project my responsibilites was to build templates for the site that can be used through the custom CMS and also made sure it was mobile responsive and worked on most browsers.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<div class="row">
-<div class="col-md-6 proTwo pull-right">
-    <h2 class="proName wow fadeInRight col-md-12">Wheres my bus</h2>
-    <ul class="facts wow fadeInRight col-md-12">
-    	<li><b>System:</b> CRUD</li>
-      <li><b>Language used:</b> PHP, HTML, CSS</li>
-      <li><b>Frameworks used:</b> Bootstrap</li>
-    	<li><b>Role:</b> Designer & Developer</li>
-    	<li><b>Platform:</b> Web</li>
-      <li><b>GitHub:</b> <a href="https://github.com/MikeWasHere/ASL">github.com/MikeWasHere/ASL</a></li>
-    </ul>
-    <p class="proDesc wow fadeInRight">Wheres My Bus is a website that gives you real time information displayed on a map for the specific bus you searched for. Gives you the option of signing in with your social networking profiles.</p>
-</div>
-    
-<div class="col-md-6 proTwo pull-left wow fadeInLeft">    
-	<img src="http://i.imgur.com/31feSIJ.png" class="web elPic">
-</div>
-</div>
+      <div class="col-md-6 col-sm-12 proTwo pull-right wow fadeInRight project-container">
+        <div class="web">
+          <span class="window-circle">
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <i class="fa fa-circle" aria-hidden="true"></i>
+          </span>
+          <div class="browser">
+            <div class="browser-arrows">
+              <i class="fa fa-caret-left" aria-hidden="true"></i>
+              <i class="fa fa-caret-right" aria-hidden="true"></i>
+            </div>
+            <span class="url-bar"><i class="fa fa-globe" aria-hidden="true"></i><a href="https://geniusplaza.com/en/" target="_blank">GeniusPlaza.com</a></span>
+          </div>
+          <div class="img-container">
+            <img src="images/geniusplaza.png" class="elPic">
+            <div class="overlay">
+              <div class="text">
+                <ul class="facts">
+                  <li>JS, HTML, CSS, Python</li>
+                  <li>Django</li>
+                  <li>Frontend Developer</li>
+                </ul>
+                <p class="proDesc">In the Genius Plaza project my day to day job is to maintain and build new pages in the Frontend. Which includes making sure everything in the front end is working the way it is supposed to. Making new pages when needed. Fixing bugs when they arise. and making pages mobile responsive as well as working with other browsers.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<div class="row">
-<div class="col-md-6 proTwo pull-left">
-    <h2 class="proName wow fadeInLeft col-md-12">B.Baklava</h2>
-    <ul class="facts wow fadeInLeft col-md-12">
-      <li><b>System:</b>CRUD</li>
-      <li><b>Language used:</b> JS, HTML, CSS</li>
-      <li><b>Frameworks used:</b> Foundation, Angular, Firebase, AngularFire</li>
-      <li><b>Role:</b> Designer & Developer</li>
-      <li><b>Platform:</b> Web</li>
-      <li><b>GitHub:</b> <a href="https://github.com/MikeWasHere/bbaklava-website">github.com/MikeWasHere/bbaklava-website</a></li>
-      <li><b>Hosted:</b> <a href="https://bbaklava.firebaseapp.com">bbaklava.com</a></li>
-    </ul>
-    <p class="proDesc wow fadeInLeft">B for Baklava is a simple mockup of a farmers market website that uses AngularFire to talk to the database to display items stored in the database. I was also able to Create an Item, Update an item, and also Delete an item.</p>
+  </div>
 </div>
-    
-<div class="col-md-6 proTwo pull-right wow fadeInRight">    
-  <img src="http://i.imgur.com/zJP9Gt0.png" class="web elPic">
-</div>
-</div>
-
-</div>
-</div>
-
-
 
 <footer class="row">
   <hr>
   <br>
-  <h3 class="col-md-12 col-sm-12">Michael Perez &copy;2016</h3>
+  <h3 class="col-md-12 col-sm-12">Michael Perez &copy;2017</h3>
 </footer>
 
 	</body>
