Added the social links

--- a/index.html
+++ b/index.html
@@ -339,6 +339,11 @@
   <hr>
   <br>
   <h3 class="col-md-12 col-sm-12">Michael Perez &copy;2017</h3>
+  <div class="social-media">
+    <a href="https://github.com/MikeWasHere"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/michael.s.perez.10"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/kutekente/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+  </div>
 </footer>
 
 	</body>
