--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <h1 class="wow fadeInDown">Who I am</h1>
         <p class="lead wow fadeInLeft">Web Designer & Developer</p>
         <hr class="half-line-red wow fadeInLeft">
-        <p class="wow fadeInUp">	Hey There, As you can tell i'm Michael Perez and i am a Web Designer and Developer. I've been in the business for quite some time now and i enjoy every minute of it. You need any projects that need some work? <a href="#" data-toggle="modal" data-target="#myModal2" style="color: #c71722;">Contact me</a> and lets see if we can bring your ideas to life! Check out my <a href="https://github.com/MikeWasHere/FinalProject">github portfolio</a> for more information on and code examples.<p>
+        <p class="wow fadeInUp">	Hey There, As you can tell i'm Michael Perez and i am a Web Designer and Developer. I've been in the business for quite some time now and i enjoy every minute of it. You need any projects that need some work? <a href="#" data-toggle="modal" data-target="#myModal2" style="color: #c71722;">Contact me</a> and lets see if we can bring your ideas to life! Check out my <a href="https://github.com/MikeWasHere/FinalProject" style="color: #c71722;">github portfolio</a> for more information on and code examples.<p>
       </div>
 
       <img src="images/297480_10150910871820595_1852264307_n.jpg" class="img-circle col-md-6 col-sm-12 elPic wow fadeInRight" >
